--- a/style.css
+++ b/style.css
@@ -1,12 +1,11 @@
-h1{
-    color: yellow;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    text-align: center;
-    font-size: 50px;
+#div1{
+    background-color: yellow;
+    width: 126mm;
+    margin: auto;
 }
 body{
     color: blue;
-    background-color: blue;
+    background-color: yellow;
 }
 #jeopardy {
     display: flex;
@@ -15,7 +14,7 @@ body{
   }
   
   .category {
-    width: 200px;
+    width: 230px;
     height: 650px;
     background-color: lightgray;
     margin: 0px;
@@ -27,7 +26,7 @@ body{
   }
   
   .question {
-    width: 180px;
+    width: 200px;
     height: 120px;
     background-color: white;
     border-color: blue;
@@ -37,6 +36,7 @@ body{
     justify-content: center;
     border-radius: 0px;
     cursor: pointer;
+    text-align: center;
   }
   
   #restart {
